--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,31 @@
 .footer {
-	margin: 0 auto;
-	margin-top: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
+  background-color: black;
+  height: 100px;
+  position: relative;
+  color: #e0921c;
+  overflow: auto;
 }
 
+.footer h4 {
+	padding-top: 20px;
+	text-align: center;
+}
+
+.footer > .bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color:#5138A1;
+  padding: 8px;
+  font-weight: 600;
+}
+
+.footer > .bottom > img {
+  width: 20px;
+  position: relative;
+  top: 3px;
+  left: 2px;
+}
