--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,7 +1,47 @@
 nav.navbar {
-  margin-bottom: 0;
+  background-color: black;
+  min-height: 70px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  color: #e7d60f;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  font-size: calc(10px + (24 - 10) * (100vw - 320px) / (1200 - 400));
+  z-index: 99;
+  white-space: nowrap;
 }
 
-.points-counter {
-	margin: 0 auto;
+.navbar ul {
+  margin: 0;
+  padding: 0;
 }
+
+.navbar li {
+  display: inline-block;
+  padding: 26px 0px;
+  width: 104.3%;
+  text-align: center;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #e0921c;
+  font-weight: 900;
+  font-size: 3em;
+}
+
+/*@media (max-width: 450px) {
+  .navbar li:first-child {
+    width: 25%;
+  }
+
+  .navbar li:nth-child(2) {
+    width: 35%;
+  }
+
+  .navbar li:last-child {
+    width: 40%;
+  }
+}*/
+
