--- a/src/components/PicButton/PicButton.css
+++ b/src/components/PicButton/PicButton.css
@@ -1,21 +1,15 @@
-.pic-button {
-  margin: 20px;
-  float: right;
-  color: #e74944;
-}
-
-.card {
+/*.card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  height: 400px;
   margin: 1rem;
   position: relative;
   width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
-}
+}*/
 
-.card > .img-container {
+/*.card > .img-container {
   height: 60%;
   overflow: hidden;
   text-align: center;
@@ -29,25 +23,27 @@
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
-}
+}*/
 
-.card > .content > ul {
-  list-style-type: none;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-}
-
-.card > .shuffle {
-  color: #ff1744;
-  font-size: 48px;
+/*.card > .pic-button {
+  background-color: #ff1744;
   position: absolute;
-  top: -20px;
-  right: 5px;
   cursor: pointer;
+}*/
+
+/*.card > .pic-button:hover {
+  background-color: #d50000;
+}*/
+
+
+.content h4 {
+  text-align: center;
 }
 
-.card > .shuffle:hover {
-  color: #d50000;
+.pic-button {
+  margin: 20px;
+  float: right;
+  color: #e74944;
+  width: 250px;
+  height: 300px;
 }
