--- a/src/components/PicButton/PicButton.css
+++ b/src/components/PicButton/PicButton.css
@@ -1,49 +1,74 @@
-/*.card {
-  background: #fff;
-  border-radius: 2px;
-  height: 400px;
-  margin: 1rem;
-  position: relative;
-  width: 325px;
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: left;
-}*/
-
-/*.card > .img-container {
-  height: 60%;
-  overflow: hidden;
-  text-align: center;
-  background:#6CADDC;
-}
-.card > .img-container > img {
-  width: 60%
-}
-
-.card > .content {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 15px;
-}*/
-
-/*.card > .pic-button {
-  background-color: #ff1744;
-  position: absolute;
-  cursor: pointer;
-}*/
-
-/*.card > .pic-button:hover {
-  background-color: #d50000;
-}*/
-
-
 .content h4 {
   text-align: center;
 }
 
 .pic-button {
-  margin: 20px;
+  /*margin: 20px;*/
+  margin: 8px 25px;
   float: right;
   color: #e74944;
   width: 250px;
   height: 300px;
+  border: 5px solid #e7d60f;
+  box-shadow: 0 18px 22px rgba(0, 0, 0, 0.16), 0 18px 22px rgba(0, 0, 0, 0.23);
+  cursor: pointer;
+}
+
+.pic-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 24px 38px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.22);
+  transition: 0.1s;
+  animation: shake 0.5s; 
+  animation-iteration-count: infinite; 
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.board-shake {
+  animation: shake .5s 0.0125s;
+}
+
+@keyframes board-shake {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  12.5%,
+  37.5%,
+  62.5%,
+  87.5% {
+    transform: translate(-10px);
+  }
+
+  25%,
+  50%,
+  75% {
+    transform: translate(10px);
+  }
+}
+
+
+@media (max-width: 750px) {
+  .pic-button {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  .pic-button {
+    margin: 10px;
+  }
 }
